# skyCatalogs

./: .buildinfo  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SConstruct  contact.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  reference_python.html  search.html  searchindex.js  setup.py  travis_test.sh  usage_create.html  usage_read.html
.doctrees/: contact.doctree  environment.pickle  index.doctree  installation.doctree  reference_python.doctree  usage_create.doctree  usage_read.doctree
.doctrees/ops-rehearsals-3-4/: SSO.doctree  UW_stars.doctree  galaxies.doctree
.doctrees/roman-rubin-1.1.2/: UW_stars.doctree  diffsky_galaxy.doctree  snana.doctree
.doctrees/trilegal/: lsst_sim.simdr2.doctree
.github/: codecov.yml
.github/workflows/: ci.yml  documentation.yml  publish-to-pypi.yml
_sources/: index.rst.txt  installation.rst.txt  reference_python.rst.txt
_sources/ops-rehearsals-3-4/: SSO.rst.txt  UW_stars.rst.txt  galaxies.rst.txt
_sources/roman-rubin-1.1.2/: diffsky_galaxy.rst.txt
_sources/trilegal/: lsst_sim.simdr2.rst.txt
_static/: documentation_options.js
cfg/: future_latest.yaml  galaxy.yaml  galaxy_latest.yaml  galaxy_wv_incr.yaml  latest.yaml  mag26.yaml  object_types.yaml  skycatalogs_schema_1.1.0.yaml  to_translate.yaml  with_knots.yaml
data/ci_sample/: galaxy_9556.parquet  galaxy_9684.parquet  galaxy_9812.parquet  galaxy_9813.parquet  galaxy_9940.parquet  galaxy_flux_9556.parquet  galaxy_flux_9683.parquet  galaxy_flux_9813.parquet  pointsource_9556.parquet  pointsource_9813.parquet  pointsource_9940.parquet  pointsource_flux_9683.parquet  pointsource_flux_9812.parquet  pointsource_flux_9940.parquet  skyCatalog.yaml
data/gaia_dr2/: gaia_dr2_temp_from_bp-rp_ratio.txt
data/row_groups/: galaxy_9556.parquet  galaxy_9813.parquet  galaxy_9940.parquet  galaxy_flux_9683.parquet  galaxy_flux_9684.parquet  galaxy_flux_9812.parquet
doc/: .gitignore  conf.py  example-create_sc-options_file.yaml  galaxy_schema.txt  index.rst  installation.rst  reference_python.rst  schema.md  usage_create.rst  usage_read.rst
doc/ops-rehearsal-3/: SSO.rst  UW_stars.rst  galaxies.rst
doc/ops-rehearsals-3-4/: SSO.rst
doc/roman-rubin-1.1.2/: UW_stars.rst  diffsky_galaxy.rst  snana.rst
docs/: conf.py  contact.rst  fake_conf.yaml  index.rst  installation.rst  reference_python.rst  usage_create.rst  usage_read.rst
docs/ops-rehearsals-3-4/: galaxies.rst
docs/roman-rubin-1.1.2/: diffsky_galaxy.rst
etc/: conda_requirements.txt  conda_test_requirements.txt
ops-rehearsals-3-4/: SSO.html  UW_stars.html  galaxies.html
python/desc/: __init__.py  _version.py
python/desc/skycatalogs/: __init__.py  _version.py  catalog_creator.py  create_catalog.py  skyCatalogs.py  translate.py
roman-rubin-1.1.2/: UW_stars.html  diffsky_galaxy.html  snana.html
scripts/: create_sc.py  translate_sc.py  write_sed_files.py
setup/: setup.sh
skycatalogs/: SConscript  __init__.py  _version.py  catalog_creator.py  diffsky_sedgen.py  flux_catalog_creator.py  main_catalog_creator.py  skyCatalogs.py  sso_catalog_creator.py  trilegal_catalog_creator.py
skycatalogs/data/cfg_templates/: diffsky_galaxy_template.yaml  gaia_star_butler_template.yaml  gaia_star_direct_template.yaml  galaxy_template.yaml  skysim5000_template.yaml  snana_template.yaml  sso_template.yaml  star_template.yaml  (+2 more)
skycatalogs/objects/: __init__.py  base_config_fragment.py  base_object.py  diffsky_object.py  gaia_object.py  galaxy_object.py  min_object.py  snana_object.py  sncosmo_object.py  sso_object.py  star_object.py  trilegal_object.py
skycatalogs/readers/: parquet_reader.py
skycatalogs/scripts/: add_variable_star_column.py  adjust_snana.py  compare.py  create_diffsky_sed.py  create_flux.py  create_main.py  create_sc.py  create_trilegal_sed.py  dump_meta.py  rotate.py
skycatalogs/utils/: SED_parquet.py  __init__.py  add_extinction.py  catalog_utils.py  common_utils.py  config_utils.py  creator_utils.py  exceptions.py  parquet_schema_utils.py  sed_tools.py  shapes.py  source_config.py  star_parquet_input.py  translate_utils.py
tests/: external_catalog.py  external_skycat.yaml  test_API.py  test_external_catalogs.py  test_gaia.py  test_gaia_direct.py  test_gaia_objects.py  test_object_api.py  test_pointsource.py  test_regions.py  test_schema_1_3_0.py  test_sed_tools.py  test_skyCatalogs.py  test_snana.py  test_yamlinclude.py
tests/utils/: output_verification.py
trilegal/: lsst_sim.simdr2.html
(+74 files in other folders)
