[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "skyCatalogs"
description = "Writes, reads catalogs input to LSST DESC simulations"
readme = "README.md"
authors = [{ name = "Joanne Bogart", email = "jrb@slac.stanford.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python", "catalog", "simulation"]
dependencies = [
    'numpy',
    'healpy',
    'astropy',
    'pyarrow',
    'pandas',
    'sncosmo'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"row_groups" = ["data/row_groups/*.parquet", "data/row_groups/*.yaml"]
"gaia_dr2" = ["data/gaia_dr2/*.dat", "data/gaia_dr2/*.txt"]
"ci_data" = ["data/ci_sample/*.parquet", "data/ci_sample/README",
             "data/ci_sample/*.yaml", "data/ci_sample/repo/*.*",
	     "data/ci_sample/repo/refcat/*/*.fits"]
