[build-system]
requires = ["setuptools >= 61.0"] # PEP 621 compliant
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "skyCatalogs"
description = "Writes, reads catalogs input to LSST DESC simulations"
readme = "README.md"
authors = [{ name = "Joanne Bogart", email = "jrb@slac.stanford.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["desc", "python", "catalog", "simulation"]
dependencies = [
    'numpy',
    'healpy',
    'astropy',
    'pyarrow',
    'pandas',
    'sncosmo'
]
requires-python = ">=3.7" # For setuptools >= 61.0 support

[tool.setuptools.dynamic]
version = {attr = ".skycatalogs._version.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]
namespaces = false
exclude = ["tests/*"]



[tool.setuptools.package-data]
"skycatalogs" = [
	      "data/row_groups/*.parquet",
	      "data/row_groups/*.yaml",
	      "data/gaia_dr2/*.dat",
	      "data/gaia_dr2/*.txt",
	      "data/ci_sample/*.parquet",
	      "data/ci_sample/README",
              "data/ci_sample/*.yaml",
	      "data/ci_sample/repo/*.*",
	      "data/ci_sample/repo/refcats/*/*.fits"
]
